--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="icon" type="image/JPG" href="https://static.wikia.nocookie.net/memes-pedia/images/8/86/Fino_Se%C3%B1ores.jpg/revision/latest?cb=20210808084218&path-prefix=es"/>
+    <link rel="icon" type="image/JPG" href="https://avatars.githubusercontent.com/u/22201485?v=4"/>
     <title>Layout-css</title>
 </head>
 <body>
